--- a/style.css
+++ b/style.css
@@ -61,3 +61,8 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #0056b3;
 }
+/* Additional styles for the homepage h1 */
+#home h1 {
+    color: green;
+    font-weight: bold;
+}
