--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: rgb(11, 0, 0);
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -63,6 +63,6 @@ nav ul li a:hover {
 }
 /* Additional styles for the homepage h1 */
 #home h1 {
-    color: green;
+    color: rgb(15, 229, 15);
     font-weight: bold;
 }
