--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: rgb(11, 0, 0);
+    color: #0b000718;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -65,4 +65,6 @@ nav ul li a:hover {
 #home h1 {
     color: rgb(15, 229, 15);
     font-weight: bold;
+    font-size: 32px; /* Adjust font size as needed */
+    text-align: center; /* Center-align the text */
 }
