--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ nav ul li {
 
 nav ul li a {
     text-decoration: none;
-    color: #0b000718;
+    color: #f0eaee;
+    font-weight: bold;
     padding: 5px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
