--- a/style.css
+++ b/style.css
@@ -69,8 +69,15 @@ nav ul li a:hover {
     font-size: 32px; /* Adjust font size as needed */
     text-align: center; /* Center-align the text */
 }
+#home p {
+    color: rgb(214, 224, 226);
+    font-weight: bold;
+    font-size: 22px; /* Adjust font size as needed */
+    text-align: center; /* Center-align the text */
+}
+
 /* Additional styles for the homepage section */
 #home {
-    background-color: rgba(44, 6, 6, 0.945); /* Set the background color to brown */
+    background-color: rgba(22, 2, 2, 0.811); /* Set the background color to brown */
     padding: 20px; /* Optional: Add padding for better readability */
 }
