--- a/style.css
+++ b/style.css
@@ -84,12 +84,13 @@ nav ul li a:hover {
 #home p {
     color: rgb(214, 224, 226);
     font-weight: bold;
-    font-size: 22px; /* Adjust font size as needed */
+    font-size: 16px; /* Adjust font size as needed */
     text-align: left; /* Center-align the text */
 }
 
-/* Additional styles for the homepage section */
+/* Additional styles for the homepage section
 #home {
-    background-color: rgba(22, 2, 2, 0.811); /* Set the background color to brown */
-    padding: 20px; /* Optional: Add padding for better readability */
-}
+    background-color: rgba(22, 2, 2, 0.811); 
+    padding: 20px; 
+} 
+*/
