--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url('images/wireless_M-min.jpg');
+    /*background-image: url('images/wireless_M-min.jpg');*/
     background-size: cover;
     background-position: center;
     color: white;
